--- a/code/GUI/image.ui
+++ b/code/GUI/image.ui
@@ -559,8 +559,8 @@
    <widget class="QPushButton" name="colorButton">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>160</y>
+      <x>170</x>
+      <y>210</y>
       <width>41</width>
       <height>31</height>
      </rect>
@@ -575,8 +575,8 @@
    <widget class="QLabel" name="cropLabel">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>150</y>
+      <x>60</x>
+      <y>200</y>
       <width>71</width>
       <height>41</height>
      </rect>
@@ -590,6 +590,31 @@
     </property>
     <property name="text">
      <string>Crop</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="setRGB">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>130</y>
+      <width>291</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Bitstream Charter</family>
+      <pointsize>18</pointsize>
+      <weight>50</weight>
+      <italic>true</italic>
+      <bold>false</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>Show image with RGB filter</string>
+    </property>
+    <property name="flat">
+     <bool>true</bool>
     </property>
    </widget>
   </widget>
