--- a/code/GUI/image.ui
+++ b/code/GUI/image.ui
@@ -285,10 +285,10 @@
    <widget class="QLabel" name="image">
     <property name="geometry">
      <rect>
-      <x>320</x>
-      <y>10</y>
-      <width>541</width>
-      <height>661</height>
+      <x>310</x>
+      <y>0</y>
+      <width>571</width>
+      <height>681</height>
      </rect>
     </property>
     <property name="text">
@@ -559,10 +559,10 @@
    <widget class="QPushButton" name="colorButton">
     <property name="geometry">
      <rect>
-      <x>170</x>
-      <y>210</y>
-      <width>41</width>
-      <height>31</height>
+      <x>10</x>
+      <y>190</y>
+      <width>271</width>
+      <height>51</height>
      </rect>
     </property>
     <property name="text">
@@ -570,26 +570,6 @@
     </property>
     <property name="flat">
      <bool>false</bool>
-    </property>
-   </widget>
-   <widget class="QLabel" name="cropLabel">
-    <property name="geometry">
-     <rect>
-      <x>60</x>
-      <y>200</y>
-      <width>71</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Bitstream Charter</family>
-      <pointsize>18</pointsize>
-      <italic>true</italic>
-     </font>
-    </property>
-    <property name="text">
-     <string>Crop</string>
     </property>
    </widget>
    <widget class="QPushButton" name="setRGB">
@@ -615,6 +595,46 @@
     </property>
     <property name="flat">
      <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="greenLabel_2">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>300</y>
+      <width>291</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Bitstream Charter</family>
+      <pointsize>9</pointsize>
+      <italic>true</italic>
+     </font>
+    </property>
+    <property name="text">
+     <string>Repalce all pixels that doesn't fulfill RGB filter with color</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="arrowLabel">
+    <property name="geometry">
+     <rect>
+      <x>130</x>
+      <y>250</y>
+      <width>61</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Bitstream Charter</family>
+      <pointsize>26</pointsize>
+      <italic>true</italic>
+     </font>
+    </property>
+    <property name="text">
+     <string>↑</string>
     </property>
    </widget>
   </widget>
