--- a/code/GUI/choseDatabase.ui
+++ b/code/GUI/choseDatabase.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>953</width>
+    <width>1076</width>
     <height>654</height>
    </rect>
   </property>
@@ -17,8 +17,8 @@
    <widget class="QPushButton" name="submitButton">
     <property name="geometry">
      <rect>
-      <x>850</x>
-      <y>600</y>
+      <x>960</x>
+      <y>610</y>
       <width>111</width>
       <height>41</height>
      </rect>
@@ -42,8 +42,8 @@
    <widget class="QPushButton" name="backButton">
     <property name="geometry">
      <rect>
-      <x>860</x>
-      <y>190</y>
+      <x>990</x>
+      <y>560</y>
       <width>71</width>
       <height>41</height>
      </rect>
@@ -64,13 +64,29 @@
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QComboBox" name="comboBox">
+   <widget class="QTextEdit" name="xEdit">
     <property name="geometry">
      <rect>
-      <x>880</x>
-      <y>310</y>
-      <width>71</width>
-      <height>51</height>
+      <x>730</x>
+      <y>40</y>
+      <width>301</width>
+      <height>181</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Bitstream Charter</family>
+      <italic>true</italic>
+     </font>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>910</x>
+      <y>0</y>
+      <width>121</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="font">
@@ -79,6 +95,45 @@
       <pointsize>18</pointsize>
       <italic>true</italic>
      </font>
+    </property>
+    <property name="text">
+     <string>Abscissa</string>
+    </property>
+   </widget>
+   <widget class="QTextEdit" name="yEdit">
+    <property name="geometry">
+     <rect>
+      <x>730</x>
+      <y>280</y>
+      <width>301</width>
+      <height>181</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Bitstream Charter</family>
+      <italic>true</italic>
+     </font>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>920</x>
+      <y>240</y>
+      <width>121</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Bitstream Charter</family>
+      <pointsize>18</pointsize>
+      <italic>true</italic>
+     </font>
+    </property>
+    <property name="text">
+     <string>Ordinate</string>
     </property>
    </widget>
   </widget>
